--- a/07_refs/p-value.bib
+++ b/07_refs/p-value.bib
@@ -46,6 +46,18 @@
   file = {/Users/javiermtz/Zotero/storage/R4JPLI66/d41586-019-00857-9.html}
 }
 
+@misc{Aschwanden:2015,
+  title = {Science {{Isn}}'t {{Broken}}},
+  author = {Aschwanden, Christie},
+  year = {2015},
+  month = aug,
+  journal = {FiveThirtyEight},
+  urldate = {2024-03-20},
+  abstract = {If you follow the headlines, your confidence in science may have taken a hit lately. Peer review? More like self-review. An investigation in November uncovered a scam in which researchers were rubber-stamping their own work, circumventing peer review at five high-profile publishers.},
+  langid = {american},
+  file = {/Users/javiermtz/Zotero/storage/CUN4G98H/science-isnt-broken.html}
+}
+
 @misc{Aschwanden:2016,
   title = {You {{Can}}'t {{Trust What You Read About Nutrition}}},
   author = {Aschwanden, Christie},
@@ -77,6 +89,81 @@
   keywords = {Peer review,Policy,Publishing,Research data}
 }
 
+@misc{Barnett:2022,
+  title = {Bad Statistics in Medical Research},
+  author = {Barnett, Adrian},
+  year = {2022},
+  month = sep,
+  urldate = {2024-03-18},
+  abstract = {If you use p=0.05 to suggest that you have made a discovery, you will be wrong at least 30\% of the time. If, as is often the case, experiments are underpowered, you will be wrong most of the time. This conclusion is demonstrated from several points of view. First, tree diagrams which show the close analogy with the screening test problem. Similar conclusions are drawn by repeated simulations of t-tests. These mimic what is done in real life, which makes the results more persuasive. The simulation method is used also to evaluate the extent to which effect sizes are over-estimated, especially in underpowered experiments. A script is supplied to allow the reader to do simulations themselves, with numbers appropriate for their own work. It is concluded that if you wish to keep your false discovery rate below 5\%, you need to use a three-sigma rule, or to insist on p{$\leq$}0.001. And never use the word `significant'.},
+  keywords = {false discovery rate,reproducibility,significance tests,statistics}
+}
+
+@article{BenjaminBerger:2019,
+  title = {Three {{Recommendations}} for {{Improving}} the {{Use}} of P-{{Values}}},
+  author = {Benjamin, Daniel J. and Berger, James O.},
+  year = {2019},
+  month = mar,
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {186--191},
+  publisher = {Taylor \& Francis},
+  issn = {0003-1305},
+  doi = {10.1080/00031305.2018.1543135},
+  urldate = {2024-03-20},
+  abstract = {Researchers commonly use p-values to answer the question: How strongly does the evidence favor the alternative hypothesis relative to the null hypothesis? p-Values themselves do not directly answer this question and are often misinterpreted in ways that lead to overstating the evidence against the null hypothesis. Even in the ``post p {$<$} 0.05 era,'' however, it is quite possible that p-values will continue to be widely reported and used to assess the strength of evidence (if for no other reason than the widespread availability and use of statistical software that routinely produces p-values and thereby implicitly advocates for their use). If so, the potential for misinterpretation will persist. In this article, we recommend three practices that would help researchers more accurately interpret p-values. Each of the three recommended practices involves interpreting p-values in light of their corresponding ``Bayes factor bound,'' which is the largest odds in favor of the alternative hypothesis relative to the null hypothesis that is consistent with the observed data. The Bayes factor bound generally indicates that a given p-value provides weaker evidence against the null hypothesis than typically assumed. We therefore believe that our recommendations can guard against some of the most harmful p-value misinterpretations. In research communities that are deeply attached to reliance on ``p {$<$} 0.05,'' our recommendations will serve as initial steps away from this attachment. We emphasize that our recommendations are intended merely as initial, temporary steps and that many further steps will need to be taken to reach the ultimate destination: a holistic interpretation of statistical evidence that fully conforms to the principles laid out in the ASA statement on statistical significance and p-values.},
+  keywords = {Bayes factor,p-Value,Post-experimental odds}
+}
+
+@article{BernerAmrhein:2022,
+  title = {Why and How We Should Join the Shift from Significance Testing to Estimation},
+  author = {Berner, Daniel and Amrhein, Valentin},
+  year = {2022},
+  month = jun,
+  journal = {Journal of Evolutionary Biology},
+  volume = {35},
+  number = {6},
+  pages = {777},
+  publisher = {Wiley-Blackwell},
+  doi = {10.1111/jeb.14009},
+  urldate = {2024-03-20},
+  abstract = {A paradigm shift away from null hypothesis significance testing seems in progress. Based on simulations, we illustrate some of the underlying motivations. First, p-values vary strongly from study to study, hence dichotomous inference using significance ...},
+  langid = {english},
+  pmid = {35582935},
+  file = {/Users/javiermtz/Zotero/storage/CUM3ICJ6/PMC9322409.html}
+}
+
+@article{BlumeGreevyWelty:2019,
+  title = {An {{Introduction}} to {{Second-Generation}} p-{{Values}}},
+  author = {Blume, Jeffrey D. and Greevy, Robert A. and Welty, Valerie F. and Smith, Jeffrey R. and Dupont, William D.},
+  year = {2019},
+  month = mar,
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {157--167},
+  publisher = {Taylor \& Francis},
+  issn = {0003-1305},
+  doi = {10.1080/00031305.2018.1537893},
+  urldate = {2024-03-20},
+  abstract = {Second generation p-values preserve the simplicity that has made p-values popular while resolving critical flaws that promote misinterpretation of data, distraction by trivial effects, and unreproducible assessments of data. The second-generation p-value (SGPV) is an extension that formally accounts for scientific relevance by using a composite null hypothesis that captures null and scientifically trivial effects. Because the majority of spurious findings are small effects that are technically nonnull but practically indistinguishable from the null, the second-generation approach greatly reduces the likelihood of a false discovery. SGPVs promote transparency, rigor and reproducibility of scientific results by a priori identifying which candidate hypotheses are practically meaningful and by providing a more reliable statistical summary of when the data are compatible with the candidate hypotheses or null hypotheses, or when the data are inconclusive. We illustrate the importance of these advances using a dataset of 247,000 single-nucleotide polymorphisms, i.e., genetic markers that are potentially associated with prostate cancer.},
+  keywords = {Likelihood ratios,Null hypothesis,p-Value,Statistical evidence}
+}
+
+@misc{Bohannon:2015,
+  title = {I {{Fooled Millions Into Thinking Chocolate Helps Weight Loss}}. {{Here}}'s {{How}}.},
+  author = {Bohannon, John},
+  year = {2015},
+  month = may,
+  journal = {Gizmodo},
+  urldate = {2024-03-20},
+  abstract = {``Slim by Chocolate!'' the headlines blared. A team of German researchers had found that people on a low-carb diet lost weight 10 percent faster if they ate a chocolate bar every day. It made the front page of Bild, Europe's largest daily newspaper, just beneath their update about the Germanwings crash. From there, it{\dots}},
+  howpublished = {https://gizmodo.com/i-fooled-millions-into-thinking-chocolate-helps-weight-1707251800},
+  langid = {english},
+  file = {/Users/javiermtz/Zotero/storage/BBZLJ9Q3/i-fooled-millions-into-thinking-chocolate-helps-weight-1707251800.html}
+}
+
 @article{BrodeurCookHeyes:2020,
   title = {Methods {{Matter}}: P-{{Hacking}} and {{Publication Bias}} in {{Causal Analysis}} in {{Economics}}},
   shorttitle = {Methods {{Matter}}},
@@ -95,6 +182,21 @@
   keywords = {and Selection,Hypothesis Testing: General,Model Evaluation,Sociology of Economics,Validation}
 }
 
+@article{CacioppoCacioppoGonzaga:2013,
+  title = {Marital Satisfaction and Break-Ups Differ across on-Line and off-Line Meeting Venues},
+  author = {Cacioppo, John T. and Cacioppo, Stephanie and Gonzaga, Gian C. and Ogburn, Elizabeth L. and VanderWeele, Tyler J.},
+  year = {2013},
+  month = jun,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {110},
+  number = {25},
+  pages = {10135--10140},
+  publisher = {Proceedings of the National Academy of Sciences},
+  doi = {10.1073/pnas.1222447110},
+  urldate = {2024-03-20},
+  abstract = {Marital discord is costly to children, families, and communities. The advent of the Internet, social networking, and on-line dating has affected how people meet future spouses, but little is known about the prevalence or outcomes of these marriages or the demographics of those involved. We addressed these questions in a nationally representative sample of 19,131 respondents who married between 2005 and 2012. Results indicate that more than one-third of marriages in America now begin on-line. In addition, marriages that began on-line, when compared with those that began through traditional off-line venues, were slightly less likely to result in a marital break-up (separation or divorce) and were associated with slightly higher marital satisfaction among those respondents who remained married. Demographic differences were identified between respondents who met their spouse through on-line vs. traditional off-line venues, but the findings for marital break-up and marital satisfaction remained significant after statistically controlling for these differences. These data suggest that the Internet may be altering the dynamics and outcomes of marriage itself.}
+}
+
 @article{Colquhoun:2014,
   title = {An Investigation of the False Discovery Rate and the Misinterpretation of P-Values},
   author = {Colquhoun, David},
@@ -109,6 +211,24 @@
   urldate = {2024-03-19},
   abstract = {If you use p=0.05 to suggest that you have made a discovery, you will be wrong at least 30\% of the time. If, as is often the case, experiments are underpowered, you will be wrong most of the time. This conclusion is demonstrated from several points of view. First, tree diagrams which show the close analogy with the screening test problem. Similar conclusions are drawn by repeated simulations of t-tests. These mimic what is done in real life, which makes the results more persuasive. The simulation method is used also to evaluate the extent to which effect sizes are over-estimated, especially in underpowered experiments. A script is supplied to allow the reader to do simulations themselves, with numbers appropriate for their own work. It is concluded that if you wish to keep your false discovery rate below 5\%, you need to use a three-sigma rule, or to insist on p{$\leq$}0.001. And never use the word `significant'.},
   keywords = {false discovery rate,reproducibility,significance tests,statistics}
+}
+
+@article{GoodmanSpruillKomaroff:2019,
+  title = {A {{Proposed Hybrid Effect Size Plus}} P-{{Value Criterion}}: {{Empirical Evidence Supporting}} Its {{Use}}},
+  shorttitle = {A {{Proposed Hybrid Effect Size Plus}} P-{{Value Criterion}}},
+  author = {Goodman, William M. and Spruill, Susan E. and Komaroff, Eugene},
+  year = {2019},
+  month = mar,
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {168--185},
+  publisher = {Taylor \& Francis},
+  issn = {0003-1305},
+  doi = {10.1080/00031305.2018.1564697},
+  urldate = {2024-03-20},
+  abstract = {When the editors of Basic and Applied Social Psychology effectively banned the use of null hypothesis significance testing (NHST) from articles published in their journal, it set off a fire-storm of discussions both supporting the decision and defending the utility of NHST in scientific research. At the heart of NHST is the p-value which is the probability of obtaining an effect equal to or more extreme than the one observed in the sample data, given the null hypothesis and other model assumptions. Although this is conceptually different from the probability of the null hypothesis being true, given the sample, p-values nonetheless can provide evidential information, toward making an inference about a parameter. Applying a 10,000-case simulation described in this article, the authors found that p-values' inferential signals to either reject or not reject a null hypothesis about the mean ({$\alpha$} = 0.05) were consistent for almost 70\% of the cases with the parameter's true location for the sampled-from population. Success increases if a hybrid decision criterion, minimum effect size plus p-value (MESP), is used. Here, rejecting the null also requires the difference of the observed statistic from the exact null to be meaningfully large or practically significant, in the researcher's judgment and experience. The simulation compares performances of several methods: from p-value and/or effect size-based, to confidence-interval based, under various conditions of true location of the mean, test power, and comparative sizes of the meaningful distance and population variability. For any inference procedure that outputs a binary indicator, like flagging whether a p-value is significant, the output of one single experiment is not sufficient evidence for a definitive conclusion. Yet, if a tool like MESP generates a relatively reliable signal and is used knowledgeably as part of a research process, it can provide useful information.},
+  keywords = {meaningful distance,MESP,Minimum effect size plus p-value criterion,NHST,statistical evidence,true power,true Type I error rate}
 }
 
 @misc{Harrell:2017,
@@ -134,6 +254,90 @@
   howpublished = {https://commons.wikimedia.org/wiki/File:Youngronaldfisher2.JPG},
   langid = {english},
   file = {/Users/javiermtz/Zotero/storage/R3IXSBSL/FileYoungronaldfisher2.html}
+}
+
+@article{KrzywinskiAltman:2013,
+  title = {Power and Sample Size},
+  author = {Krzywinski, Martin and Altman, Naomi},
+  year = {2013},
+  month = dec,
+  journal = {Nature Methods},
+  volume = {10},
+  number = {12},
+  pages = {1139--1140},
+  publisher = {Nature Publishing Group},
+  issn = {1548-7105},
+  doi = {10.1038/nmeth.2738},
+  urldate = {2024-03-19},
+  abstract = {The ability to detect experimental effects is undermined in studies that lack power.},
+  copyright = {2013 Springer Nature America, Inc.},
+  langid = {english},
+  keywords = {Publishing,Research data,Statistical methods},
+  file = {/Users/javiermtz/Zotero/storage/6U89J62R/nmeth.html}
+}
+
+@article{LeekPeng:2015,
+  title = {Statistics: {{P}} Values Are Just the Tip of the Iceberg},
+  shorttitle = {Statistics},
+  author = {Leek, Jeffrey T. and Peng, Roger D.},
+  year = {2015},
+  month = apr,
+  journal = {Nature},
+  volume = {520},
+  number = {7549},
+  pages = {612--612},
+  publisher = {Nature Publishing Group},
+  issn = {1476-4687},
+  doi = {10.1038/520612a},
+  urldate = {2024-03-20},
+  abstract = {Ridding science of shoddy statistics will require scrutiny of every step, not merely the last one, say Jeffrey T. Leek and Roger D. Peng.},
+  copyright = {2015 Springer Nature Limited},
+  langid = {english},
+  keywords = {Careers,Mathematics and computing,Research management}
+}
+
+@misc{Leif:2023,
+  title = {[114] {{Exhibits}} 3, 4, and 5},
+  author = {Leif, Joe, \&, Uri},
+  year = {2023},
+  month = sep,
+  journal = {Data Colada},
+  urldate = {2024-03-20},
+  abstract = {We recently presented evidence of data tampering in four retracted papers co-authored by Harvard Business School professor Francesca Gino. She is now suing the three of us (and Harvard University). Gino's lawsuit (.htm), like many lawsuits, contains a number of Exhibits that present information relevant to the case. For example, the lawsuit contains some Exhibits...},
+  howpublished = {http://datacolada.org/114},
+  langid = {american},
+  file = {/Users/javiermtz/Zotero/storage/RYTFZ9W4/114.html}
+}
+
+@misc{Leif:2023a,
+  title = {[112] {{Data Falsificada}} ({{Part}} 4): "{{Forgetting The Words}}"},
+  shorttitle = {[112] {{Data Falsificada}} ({{Part}} 4)},
+  author = {Leif, Joe, \&, Uri},
+  year = {2023},
+  month = jun,
+  journal = {Data Colada},
+  urldate = {2024-03-20},
+  abstract = {This is the last post in a four-part series detailing evidence of fraud in four academic papers co-authored by Harvard Business School Professor Francesca Gino. It is worth reiterating two things. First, to the best of our knowledge, none of Gino's co-authors carried out or assisted with the data collection for the studies in this...},
+  howpublished = {https://datacolada.org/112},
+  langid = {american},
+  file = {/Users/javiermtz/Zotero/storage/UYV6AICB/112.html}
+}
+
+@article{Nuzzo:2013,
+  title = {Online Daters Do Better in the Marriage Stakes},
+  author = {Nuzzo, Regina},
+  year = {2013},
+  month = jun,
+  journal = {Nature},
+  publisher = {Nature Publishing Group},
+  issn = {1476-4687},
+  doi = {10.1038/nature.2013.13120},
+  urldate = {2024-03-19},
+  abstract = {Those who first find each other through the Internet are more likely to stay hitched.},
+  copyright = {2013 Springer Nature Limited},
+  langid = {english},
+  keywords = {Culture,Psychology,Society,Sociology},
+  file = {/Users/javiermtz/Zotero/storage/PFR2UB3N/nature.2013.html}
 }
 
 @article{Nuzzo:2014,
@@ -181,17 +385,17 @@
   file = {/Users/javiermtz/Zotero/storage/WYU44NEP/1478.html}
 }
 
-@misc{Resnick:2017,
+@misc{Resnick:2017a,
   title = {What a Nerdy Debate about P-Values Shows about Science --- and How to Fix It},
   author = {Resnick, Brian},
   year = {2017},
   month = jul,
   journal = {Vox},
-  urldate = {2024-03-19},
+  urldate = {2024-03-20},
   abstract = {The case for, and against, redefining "statistical significance."},
   howpublished = {https://www.vox.com/science-and-health/2017/7/31/16021654/p-values-statistical-significance-redefine-0005},
   langid = {english},
-  file = {/Users/javiermtz/Zotero/storage/CPL6FKRS/p-values-statistical-significance-redefine-0005.html}
+  file = {/Users/javiermtz/Zotero/storage/SUNDRIGA/p-values-statistical-significance-redefine-0005.html}
 }
 
 @misc{S:2024,
@@ -200,6 +404,18 @@
   urldate = {2024-03-15},
   howpublished = {https://xkcd.com/882/},
   file = {/Users/javiermtz/Zotero/storage/YPDN2T3E/882.html}
+}
+
+@misc{Scheiber:2023,
+  title = {The {{Harvard Professor}} and the {{Bloggers}}},
+  author = {Scheiber, Noam},
+  year = {2023},
+  month = sep,
+  urldate = {2024-03-20},
+  abstract = {When Francesca Gino, a rising academic star, was accused of falsifying data --- about how to stop dishonesty --- it didn't just torch her career. It inflamed a crisis in behavioral science.},
+  chapter = {Business},
+  langid = {american},
+  keywords = {Academic and Scientific Journals,Ariely Dan,Colleges and Universities,Ethics and Official Misconduct,Falsification of Data,Gino Francesca,Harvard Business School,Libel and Slander,Research,Sociology,Suits and Litigation (Civil)}
 }
 
 @misc{Simonsohn:2020,
@@ -216,6 +432,23 @@
   file = {/Users/javiermtz/Zotero/storage/QWLWAM79/91.html}
 }
 
+@article{StefanSchonbrodt:2023,
+  title = {Big Little Lies: A Compendium and Simulation of p-Hacking Strategies},
+  shorttitle = {Big Little Lies},
+  author = {Stefan, Angelika M. and Sch{\"o}nbrodt, Felix D.},
+  year = {2023},
+  month = feb,
+  journal = {Royal Society Open Science},
+  volume = {10},
+  number = {2},
+  pages = {220346},
+  publisher = {Royal Society},
+  doi = {10.1098/rsos.220346},
+  urldate = {2024-03-20},
+  abstract = {In many research fields, the widespread use of questionable research practices has jeopardized the credibility of scientific results. One of the most prominent questionable research practices is p-hacking. Typically, p-hacking is defined as a compound of strategies targeted at rendering non-significant hypothesis testing results significant. However, a comprehensive overview of these p-hacking strategies is missing, and current meta-scientific research often ignores the heterogeneity of strategies. Here, we compile a list of 12 p-hacking strategies based on an extensive literature review, identify factors that control their level of severity, and demonstrate their impact on false-positive rates using simulation studies. We also use our simulation results to evaluate several approaches that have been proposed to mitigate the influence of questionable research practices. Our results show that investigating p-hacking at the level of strategies can provide a better understanding of the process of p-hacking, as well as a broader basis for developing effective countermeasures. By making our analyses available through a Shiny app and R package, we facilitate future meta-scientific research aimed at investigating the ramifications of p-hacking across multiple strategies, and we hope to start a broader discussion about different manifestations of p-hacking in practice.},
+  keywords = {error rates,false-positive rate,p-curve,questionable research practices,Shiny app,significance,simulation}
+}
+
 @article{WassersteinLazar:2016,
   title = {The {{ASA Statement}} on P-{{Values}}: {{Context}}, {{Process}}, and {{Purpose}}},
   shorttitle = {The {{ASA Statement}} on P-{{Values}}},
@@ -230,4 +463,14 @@
   issn = {0003-1305},
   doi = {10.1080/00031305.2016.1154108},
   urldate = {2024-03-19}
+}
+
+@misc{Yrptvaw0:2015,
+  title = {You're Probably Thinking of p Values All Wrong (p {$<$} 0.05)},
+  year = {2015},
+  month = nov,
+  journal = {The Incidental Economist},
+  urldate = {2024-03-19},
+  abstract = {I'm guilty of getting this wrong, and it is likely you are too: If the p-value is},
+  file = {/Users/javiermtz/Zotero/storage/CV3FQVJT/youre-probably-thinking-of-p-values-all-wrong-p-0-05.html}
 }
